--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -5,7 +5,13 @@
     padding-top: 18px;
     text-decoration: none;
     color: #FFFFFF;
+    margin-right: 18px;
 }
+
+.header__lang-link:last-child{
+    margin-right: 0;
+}
+
 
 @media screen and (max-width: 767px){
     .header__lang-link{
