--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,6 +4,12 @@
     justify-content: space-between;
 }
 
+@media screen and (max-width: 1023px){
+    .header{
+        padding: 28px 28px 0 24px;
+    }
+}
+
 @media screen and (max-width: 767px){
     .header{
         padding: 16px 16px 0 16px;
