--- a/pages/index.css
+++ b/pages/index.css
@@ -9,6 +9,7 @@
 @import url('../blocks/lead/lead.css');
 @import url('../blocks/lead/__title/lead__title.css');
 @import url('../blocks/lead/__subtitle/lead__subtitle.css');
+@import url('../blocks/lead/__train/lead__train.css');
 @import url('../blocks/lead/__image/lead__image.css');
 @import url('../blocks/lead/__caption/lead__caption.css');
 @import url('../blocks/intro/intro.css');
@@ -16,18 +17,18 @@
 @import url('../blocks/intro/__text/intro__text.css');
 @import url('../blocks/intro/__list/intro__list.css');
 @import url('../blocks/intro/__list-item/intro__list-item.css');
-@import url('../blocks/intro/__list-item/_bold/intro__list-item_bold.css');
+@import url('../blocks/intro/__bold/intro__bold.css');
 @import url('../blocks/photo-grid/photo-grid.css');
 @import url('../blocks/photo-grid/__item/photo-grid__item.css');
 @import url('../blocks/places/places.css');
-@import url('../blocks/places/place/place.css');
-@import url('../blocks/places/place/__title/place__title.css');
-@import url('../blocks/places/place/__website/place__website.css');
-@import url('../blocks/places/place/__url-heading/place__url-heading.css');
-@import url('../blocks/places/place/__link/place__link.css');
-@import url('../blocks/places/place/__image/place__image.css');
-@import url('../blocks/places/place/__text/place__text.css');
-@import url('../blocks/places/place/__paragraph/place__paragraph.css');
+@import url('../blocks/place/place.css');
+@import url('../blocks/place/__title/place__title.css');
+@import url('../blocks/place/__website/place__website.css');
+@import url('../blocks/place/__url-heading/place__url-heading.css');
+@import url('../blocks/place/__link/place__link.css');
+@import url('../blocks/place/__image/place__image.css');
+@import url('../blocks/place/__text/place__text.css');
+@import url('../blocks/place/__paragraph/place__paragraph.css');
 @import url('../blocks/cover/cover.css');
 @import url('../blocks/cover/__link/cover__link.css');
 @import url('../blocks/cover/__background/cover__background.css');
