--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,19 +1,30 @@
 .footer{
-    padding: 92px 48px 24px 48px;
+    max-width: 1184px;
+    width: 100%;
+    padding: 92px 0 24px 0;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    margin: 0 auto;
+}
+
+
+@media screen and (max-width: 1279px){
+    .footer{
+        max-width: calc(100% - 48px*2);
+    }
 }
 
 @media screen and (max-width: 1023px){
     .footer{
-        padding: 88px 24px 24px 24px;
+        padding-top: 88px;
+        max-width: calc(100% - 24px*2);
     }
 }
 
 @media screen and (max-width: 767px){
     .footer{
         display: block;
-        padding: 64px 0 24px 16px;
+        padding-top: 64px;
+        max-width: calc(100% - 16px*2);
     }
 }
