--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,17 +1,27 @@
 .header{
-    padding: 28px 48px 0 48px;
+    max-width: 1184px;
+    width: 100%;
+    padding-top: 28px;
     display: flex;
     justify-content: space-between;
+    margin: 0 auto;
+}
+
+@media screen and (max-width: 1279px){
+    .header{
+        max-width: calc(100% - 48px*2);
+    }
 }
 
 @media screen and (max-width: 1023px){
     .header{
-        padding: 28px 28px 0 24px;
+        max-width: calc(100% - 24px*2);
     }
 }
 
-@media screen and (max-width: 767px){
+@media screen and (max-width: 320px){
     .header{
-        padding: 16px 16px 0 16px;
+        padding-top: 16px;
+        max-width: calc(100% - 16px*2);
     }
 }
